2003-09-20    <cesar@ciencias.unam.mx>

	* ScriptBlock.cs,Block.cs: Added ToString function.

2003-09-20    <cesar@ciencias.unam.mx>

	* ASTList.cs, ArrayLiteral.cs, BitwiseBinary.cs, Block.cs,
	DebugBreak.cs, Enum.cs, Equality.cs, Eval.cs, ForIn.cs,
	FunctionExpression.cs, Import.cs, In.cs, InstanceOf.cs,
	Literal.cs, NumericBinary.cs, NumericUnary.cs, Package.cs,
	Plus.cs, PostOrPrefixOperator.cs, Print.cs, Relational.cs,
	Statement.cs, StrictEquality.cs, StringLiteral.cs, Throw.cs,
	Try.cs, TypeOf.cs, VariableDeclaration.cs, With.cs, ast.cs, 
	: erased Visit method and made some mono indentation style changes.

	* CodeGenerator.cs: commented some function calls.
	* FunctionDeclaration.cs: moved function attributes to
	FunctionObject class, erased Visit method.
	* FunctionObject.cs: Here is where we store a function
	expression/declaration info, erased Visit method.
	* ScriptBlock.cs: Added a Block field, Block will contain the
	source elements.
	* jscript-lexer-parser.g: updated the grammar to build the program
	representation based on ScriptBlock.

2003-09-19    <cesar@ciencias.unam.mx>

	* JSToken.cs: public API compliance.

2003-09-07 Cesar Lopez Nataren  <cesar@ciencias.unam.mx>

	* Context.cs: Added constructor and Document field.
	* DocumentContext.cs: Added Name field.
	* JSParser.cs: Integration of antlr's generated parser with
	JSParser public API. ScriptBlock is now the principal data structure that
	represents a Jscript .Net program.
	* JSScanner.cs: Integration of antlr's generated lexer with
	JSScanner public API.

2003-07-27  Cesar Lopez Nataren  <cesar@ciencias.unam.mx>
	* Added files StringLiteral.cs, CodeGenerator.cs and Print.cs.

2003-07-27  Cesar Lopez Nataren  <cesar@ciencias.unam.mx>

	* jscript-lexer-parser.g: Changed the namespace to
	Microsoft.JScript.Tmp.

	* jscript-lexer-parser.g: Fixwd a typo at source_elements rule.

	* jscript-lexer-parser.g: Got the name of a
	global_function_declaration and also its return type if
	available. 
